--- a/recipes.html
+++ b/recipes.html
@@ -25,11 +25,8 @@
     </header>
 
     <main>
-      <div class="players">
-        User:
-        <span class="player-name">Hello mystery user</span>
-      </div>
-
+      <h2>Vote for Your Favorite Recipe</h2>
+      <h3>Top Rated Recipes</h3>
       <!-- More formatting with old style HTML -->
       <br />
 
@@ -55,47 +52,121 @@
               <table>
                 <thead>
                   <tr>
-                    <th>Meal</th>
+                    <th>Meal Title</th>
                   </tr>
                   <tr>
                     <th>Ingredients</th>
                     <th>Per Serving</th>
                   </tr>
                 </thead>
-                <td><a href="reviews.html">Reviews</a></td>
+                <tbody>
+                  <tr>
+                    <td>
+                      <ul>
+                        <li>ingredient1</li>
+                        <li>ingredient2</li>
+                        <li>ingredient3</li>
+                      </ul>
+                    </td>
+                    <td>
+                      <ul>
+                        <li>Calories:</li>
+                        <li>Protein:</li>
+                        <li>Fat</li>
+                        <li>Carbs</li>
+                      </ul>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td><a href="">Instructions</a></td>
+                    <td><a href="reviews.html">Reviews</a></td>
+                  </tr>
+                  <tr>       
+                    <td>Votes: </td>           
+                    <td><button>UpVote</button></td>
+                  </tr>
+                </tbody>
               </table>
             </td>
             <td>
               <table>
                 <thead>
                   <tr>
-                    <th>Meal</th>
+                    <th>Meal Title</th>
                   </tr>
                   <tr>
                     <th>Ingredients</th>
                     <th>Per Serving</th>
                   </tr>
                 </thead>
-                <td>
-                  <a href="reviews.html">Reviews</a>                </td>
+                <tbody>
+                  <tr>
+                    <td>
+                      <ul>
+                        <li>ingredient1</li>
+                        <li>ingredient2</li>
+                        <li>ingredient3</li>
+                      </ul>
+                    </td>
+                    <td>
+                      <ul>
+                        <li>Calories:</li>
+                        <li>Protein:</li>
+                        <li>Fat</li>
+                        <li>Carbs</li>
+                      </ul>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td><a href="">Instructions</a></td>
+                    <td><a href="reviews.html">Reviews</a></td>
+                  </tr>
+                  <tr>       
+                    <td>Votes: </td>           
+                    <td><button>UpVote</button></td>
+                  </tr>
+                </tbody>
               </table>
             </td>
             <td>
               <table>
                 <thead>
                   <tr>
-                    <th>Meal</th>
+                    <th>Meal Title</th>
                   </tr>
                   <tr>
                     <th>Ingredients</th>
                     <th>Per Serving</th>
                   </tr>
                 </thead>
-                <td><a href="reviews.html">Reviews</a></td>
+                <tbody>
+                  <tr>
+                    <td>
+                      <ul>
+                        <li>ingredient1</li>
+                        <li>ingredient2</li>
+                        <li>ingredient3</li>
+                      </ul>
+                    </td>
+                    <td>
+                      <ul>
+                        <li>Calories:</li>
+                        <li>Protein:</li>
+                        <li>Fat</li>
+                        <li>Carbs</li>
+                      </ul>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td><a href="">Instructions</a></td>
+                    <td><a href="reviews.html">Reviews</a></td>
+                  </tr>
+                  <tr>       
+                    <td>Votes: </td>           
+                    <td><button>UpVote</button></td>
+                  </tr>
+                </tbody>
               </table>
-            </td>
-            <td>
-
             </td>
           </tr>
         </table>
@@ -104,7 +175,7 @@
 
     <footer>
       <hr />
-      <span class="text-reset">Author Name(s)</span>
+      <span class="text-reset">Carter Gividen</span>
       <br />
       <a href="https://github.com/CarterG2099/startup.git">GitHub</a>
     </footer>
