--- a/reviews.html
+++ b/reviews.html
@@ -20,40 +20,24 @@
     </header>
 
     <main>
-      <table>
-        <thead>
-          <tr>
-            <th>Name</th>
-            <th>Score</th>
-            <th>Date</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td>1</td>
-            <td>도윤 이</td>
-            <td>34</td>
-            <td>May 20, 2021</td>
-          </tr>
-          <tr>
-            <td>2</td>
-            <td>Annie James</td>
-            <td>29</td>
-            <td>June 2, 2021</td>
-          </tr>
-          <tr>
-            <td>3</td>
-            <td>Gunter Spears</td>
-            <td>7</td>
-            <td>July 3, 2020</td>
-          </tr>
-        </tbody>
-      </table>
+      <h2>Recipe Reviews</h2>
+
+      <div class="review-card">
+        <h3>John Doe</h3>
+        <p><strong>Rating:</strong> 5/5</p>
+        <p><strong>Review:</strong> Delicious! I loved this recipe.</p>
+      </div>
+    
+      <div class="review-card">
+        <h3>Jane Smith</h3>
+        <p><strong>Rating:</strong> 4/5</p>
+        <p><strong>Review:</strong> Easy to make and very tasty.</p>
+      </div>
     </main>
 
     <footer>
       <hr />
-      <span class="text-reset">Author Name(s)</span>
+      <span class="text-reset">Carter Gividen</span>
       <br />
       <a href="https://github.com/CarterG2099/startup.git">GitHub</a>
     </footer>
