--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
     <footer>
       <hr />
-      <span class="text-reset">Author Name(s)</span>
+      <span class="text-reset">Carter Gividen</span>
       <br />
       <a href="https://github.com/CarterG2099/startup.git">GitHub</a>
     </footer>
