specified startup requirement fulfillments

--- a/recipes.html
+++ b/recipes.html
@@ -52,7 +52,7 @@
               <table>
                 <thead>
                   <tr>
-                    <th>Meal Title</th>
+                    <th>Meal Title(Database Data)</th>
                   </tr>
                   <tr>
                     <th>Ingredients</th>
@@ -82,7 +82,7 @@
                     <td><a href="reviews.html">Reviews</a></td>
                   </tr>
                   <tr>       
-                    <td>Votes: </td>           
+                    <td>Votes:WebSocket Data </td>           
                     <td><button>UpVote</button></td>
                   </tr>
                 </tbody>
