--- a/reviews.html
+++ b/reviews.html
@@ -20,7 +20,7 @@
     </header>
 
     <main>
-      <h2>Recipe Reviews</h2>
+      <h2>Recipe Reviews (WebSocketData)</h2>
 
       <div class="review-card">
         <h3>John Doe</h3>
