--- a/recipes.html
+++ b/recipes.html
@@ -25,7 +25,7 @@
     </header>
 
     <main>
-      <h2>Vote for Your Favorite Recipe</h2>
+      <h2>Username Vote for Your Favorite Recipe</h2>
       <h3>Top Rated Recipes</h3>
       <!-- More formatting with old style HTML -->
       <br />
@@ -45,6 +45,11 @@
               <th>Breakfast</th>
               <th>Lunch</th>
               <th>Dinner</th>
+            </tr>
+            <tr>
+              <td><img src="images/breakfast.jpg"></td>
+              <td><img src="images/lunch.jpg"></td>
+              <td><img src="images/dinner.jpg"></td>
             </tr>
           </thead>
           <tr>
