--- a/index.html
+++ b/index.html
@@ -6,39 +6,48 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ProNutriLog-HTML</title>
     <link rel="icon" href="favicon.ico" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link rel="stylesheet" href="main.css"/>
   </head>
-  <body>
+  <body class="bg-primary text-light">
     <!-- Use header, main, and footer elements to give semantic structure -->
-    <header>
-      <h1>ProNutriLog<sup>&reg;</sup></h1>
-
+    <header class="container-fluid">
       <!-- Navigation elements -->
-      <nav>
+      <nav class="navbar fixed-top navbar-dark bg-dark">
+        <a class="navbar-brand" href="#">ProNutriLog<sup>&reg;</sup></a>
         <!-- Menu is a semantic alternative to <ul> that represents an interaction -->
-        <menu>
-          <a href="index.html">Home</a>  <a href="recipes.html">Recipes</a>  <a href="reviews.html">Reviews</a>
+        <menu class="navbar-nav">
+          <li class="nav-item"> 
+            <a class="nav-link" href="index.html">Home</a> 
+          </li>
+          <li class="nav-item"> 
+            <a class="nav-link" href="recipes.html">Recipes</a> 
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="reviews.html">Reviews</a>
+          </li>
         </menu>
       </nav>
-
       <!-- Since we don't have the ability to style we use old style HTML to give some visual formatting -->
-      <hr />
     </header>
 
-    <main>
-      <h1>Welcome</h1>
-      <p>Login to view recipes</p>
-      <form method="get" action="recipes.html">
-        <label for="name">Name</label>
-        <input type="text" id="name" placeholder="Your name here" />
-        <button type="submit">Login</button>
-      </form>
+    <main class="container-fluid bg-light text-center text-dark">
+      <div>
+        <h1>Welcome</h1>
+        <p>Login to view recipes</p>
+        <form method="get" action="recipes.html">
+          <label for="name">Name</label>
+          <input type="text" id="name" placeholder="Your name here" />
+          <button type="submit" class="btn btn-primary">Login</button>
+        </form>
+      </div>
     </main>
 
-    <footer>
-      <hr />
-      <span class="text-reset">Carter Gividen</span>
-      <br />
-      <a href="https://github.com/CarterG2099/startup.git">GitHub</a>
+    <footer class="bg-dark text-white-50">
+      <div class="container-fluid">
+        <span class="text-reset">Carter Gividen</span>
+        <a class="text-reset" href="https://github.com/CarterG2099/startup.git">GitHub</a>
+      </div>
     </footer>
   </body>
 </html>
