--- a/recipes.html
+++ b/recipes.html
@@ -6,40 +6,44 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Recipes</title>
     <link rel="icon" href="favicon.ico" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link rel="stylesheet" href="main.css"/>
   </head>
-  <body>
+  <body class="bg-primary text-light">
     <!-- Use header, main, and footer elements to give semantic structure -->
-    <header>
-      <h1>Recipes<sup>&reg;</sup></h1>
-
+    <header class="container-fluid">
       <!-- Navigation elements -->
-      <nav>
+      <nav class="navbar fixed-top navbar-dark bg-dark">
+        <a class="navbar-brand" href="#">ProNutriLog<sup>&reg;</sup></a>
         <!-- Menu is a semantic alternative to <ul> that represents an interaction -->
-        <menu>
-          <a href="index.html">Home</a>  <a href="recipes.html">Recipes</a>  <a href="reviews.html">Reviews</a>
+        <menu class="navbar-nav">
+          <li class="nav-item"> 
+            <a class="nav-link" href="index.html">Home</a> 
+          </li>
+          <li class="nav-item"> 
+            <a class="nav-link" href="recipes.html">Recipes</a> 
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="reviews.html">Reviews</a>
+          </li>
         </menu>
       </nav>
-
       <!-- Since we don't have the ability to style we use old style HTML to give some visual formatting -->
-      <hr />
     </header>
 
-    <main>
+    <main class="container-fluid bg-light text-center text-dark">
       <h2>Username Vote for Your Favorite Recipe</h2>
       <h3>Top Rated Recipes</h3>
       <!-- More formatting with old style HTML -->
       <br />
-
       <br />
-
-      <div>
-        <button>Add Recipe</button>
+      <div class="top-right-container">
+        <input type="file" id="fileInput" name="fileInput">
+        <button type="submit" onclick="uploadFile()" class="btn btn-primary">Submit Recipe</button>
       </div>
-
       <br />
-
       <div>
-        <table>
+        <table class="table">
           <thead>
             <tr>            
               <th>Breakfast</th>
@@ -47,14 +51,14 @@
               <th>Dinner</th>
             </tr>
             <tr>
-              <td><img src="images/breakfast.jpg"></td>
-              <td><img src="images/lunch.jpg"></td>
-              <td><img src="images/dinner.jpg"></td>
+              <td><img src="images/breakfast.jpg" class="img-thumbnail"></td>
+              <td><img src="images/lunch.jpg" class="img-thumbnail"></td>
+              <td><img src="images/dinner.jpg" class="img-thumbnail"></td>
             </tr>
           </thead>
           <tr>
             <td>
-              <table>
+              <table class="table">
                 <thead>
                   <tr>
                     <th>Meal Title(Database Data)</th>
@@ -88,13 +92,13 @@
                   </tr>
                   <tr>       
                     <td>Votes:WebSocket Data </td>           
-                    <td><button>UpVote</button></td>
+                    <td><button class="btn btn-primary">UpVote</button></td>
                   </tr>
                 </tbody>
               </table>
             </td>
             <td>
-              <table>
+              <table class="table">
                 <thead>
                   <tr>
                     <th>Meal Title</th>
@@ -128,13 +132,13 @@
                   </tr>
                   <tr>       
                     <td>Votes: </td>           
-                    <td><button>UpVote</button></td>
+                    <td><button class="btn btn-primary">UpVote</button></td>
                   </tr>
                 </tbody>
               </table>
             </td>
             <td>
-              <table>
+              <table class="table">
                 <thead>
                   <tr>
                     <th>Meal Title</th>
@@ -168,7 +172,7 @@
                   </tr>
                   <tr>       
                     <td>Votes: </td>           
-                    <td><button>UpVote</button></td>
+                    <td><button class="btn btn-primary">UpVote</button></td>
                   </tr>
                 </tbody>
               </table>
@@ -178,11 +182,11 @@
       </div>
     </main>
 
-    <footer>
-      <hr />
-      <span class="text-reset">Carter Gividen</span>
-      <br />
-      <a href="https://github.com/CarterG2099/startup.git">GitHub</a>
+    <footer class="bg-dark text-white-50">
+      <div class="container-fluid">
+        <span class="text-reset">Carter Gividen</span>
+        <a class="text-reset" href="https://github.com/CarterG2099/startup.git">GitHub</a>
+      </div>
     </footer>
   </body>
 </html>
