--- a/reviews.html
+++ b/reviews.html
@@ -5,21 +5,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Reviews</title>
     <link rel="icon" href="favicon.ico" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link rel="stylesheet" href="main.css"/>
   </head>
-  <body>
-    <header>
-      <h1>Reviews<sup>&reg;</sup></h1>
-
-      <nav>
-        <menu>
-          <a href="index.html">Home</a>  <a href="recipes.html">Recipes</a>  <a href="reviews.html">Reviews</a>
+  <body class="bg-primary text-light">
+    <!-- Use header, main, and footer elements to give semantic structure -->
+    <header class="container-fluid">
+      <!-- Navigation elements -->
+      <nav class="navbar fixed-top navbar-dark bg-dark">
+        <a class="navbar-brand" href="#">ProNutriLog<sup>&reg;</sup></a>
+        <!-- Menu is a semantic alternative to <ul> that represents an interaction -->
+        <menu class="navbar-nav">
+          <li class="nav-item"> 
+            <a class="nav-link" href="index.html">Home</a> 
+          </li>
+          <li class="nav-item"> 
+            <a class="nav-link" href="recipes.html">Recipes</a> 
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="reviews.html">Reviews</a>
+          </li>
         </menu>
       </nav>
-
-      <hr />
+      <!-- Since we don't have the ability to style we use old style HTML to give some visual formatting -->
     </header>
-
-    <main>
+    
+    <main class="container-fluid bg-light text-center text-dark">
       <h2>Recipe Reviews (WebSocketData)</h2>
 
       <div class="review-card">
@@ -35,11 +46,11 @@
       </div>
     </main>
 
-    <footer>
-      <hr />
-      <span class="text-reset">Carter Gividen</span>
-      <br />
-      <a href="https://github.com/CarterG2099/startup.git">GitHub</a>
+    <footer class="bg-dark text-white-50">
+      <div class="container-fluid">
+        <span class="text-reset">Carter Gividen</span>
+        <a class="text-reset" href="https://github.com/CarterG2099/startup.git">GitHub</a>
+      </div>
     </footer>
   </body>
 </html>
