--- a/recipes.html
+++ b/recipes.html
@@ -7,7 +7,10 @@
     <title>Recipes</title>
     <link rel="icon" href="favicon.ico" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+
     <link rel="stylesheet" href="main.css"/>
+
   </head>
   <body class="bg-primary text-light">
     <!-- Use header, main, and footer elements to give semantic structure -->
@@ -38,8 +41,45 @@
       <br />
       <br />
       <div class="top-right-container">
-        <input type="file" id="fileInput" name="fileInput">
-        <button type="submit" onclick="uploadFile()" class="btn btn-primary">Submit Recipe</button>
+        <!-- Button to trigger the modal -->
+        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#myModal">Submit Recipe</button>
+
+        <!-- Modal template -->
+        <div class="modal fade" id="myModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+          <div class="modal-dialog">
+            <div class="modal-content">
+              <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Submit Recipe</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+              </div>
+              <div class="modal-body">
+                <form>
+                  <div class="mb-3">
+                    <label for="mealTitle" class="form-label">Meal Title</label>
+                    <input type="text" class="form-control" id="mealTitle" placeholder="Enter Meal Title">
+                  </div>
+                  <div class="mb-3">
+                    <label for="ingredients" class="form-label">Ingredients</label>
+                    <textarea class="form-control" id="ingredients" rows="3" placeholder="Enter ingredients"></textarea>
+                  </div>
+                  <div class="mb-3">
+                    <label for="perServing" class="form-label">Per Serving</label>
+                    <textarea class="form-control" id="perServing" rows="3" placeholder="Enter per serving details"></textarea>
+                  </div>
+                  <div class="mb-3">
+                    <label for="instructions" class="form-label">Instructions</label>
+                    <textarea class="form-control" id="instructions" rows="3" placeholder="Enter instructions"></textarea>
+                  </div>
+                  <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Submit</button>
+                </form>
+              </div>
+              <!-- <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary">Submit</button>
+              </div> -->
+            </div>
+          </div>
+        </div>
       </div>
       <br />
       <div>
