--- a/recipes.html
+++ b/recipes.html
@@ -70,13 +70,12 @@
                     <label for="instructions" class="form-label">Instructions</label>
                     <textarea class="form-control" id="instructions" rows="3" placeholder="Enter instructions"></textarea>
                   </div>
-                  <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Submit</button>
+                  <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-primary">Submit</button>
+                  </div>
                 </form>
               </div>
-              <!-- <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary">Submit</button>
-              </div> -->
             </div>
           </div>
         </div>
