--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <form method="get" action="recipes.html">
           <label for="name">Name</label>
           <input type="text" id="name" placeholder="Your name here" />
-          <button type="submit" class="btn btn-primary">Login</button>
+          <button type="submit" class="btn btn-primary" onclick="login()">Login</button>
         </form>
       </div>
     </main>
