--- a/index.html
+++ b/index.html
@@ -49,5 +49,6 @@
         <a class="text-reset" href="https://github.com/CarterG2099/startup.git">GitHub</a>
       </div>
     </footer>
+    <script src="login.js"></script>
   </body>
 </html>
