--- a/recipes.html
+++ b/recipes.html
@@ -35,7 +35,7 @@
     </header>
 
     <main class="container-fluid bg-light text-center text-dark">
-      <h2>Username Vote for Your Favorite Recipe</h2>
+      <h2 class="user-name"> Vote for Your Favorite Recipe</h2>
       <h3>Top Rated Recipes</h3>
       <!-- More formatting with old style HTML -->
       <br />
@@ -227,5 +227,6 @@
         <a class="text-reset" href="https://github.com/CarterG2099/startup.git">GitHub</a>
       </div>
     </footer>
+    <script src="recipes.js"></script>
   </body>
 </html>
