--- a/reviews.html
+++ b/reviews.html
@@ -74,5 +74,7 @@
         <a class="text-reset" href="https://github.com/CarterG2099/startup.git">GitHub</a>
       </div>
     </footer>
+
+    <script src="reviews.js"></script>
   </body>
 </html>
