--- a/recipes.html
+++ b/recipes.html
@@ -7,7 +7,7 @@
     <title>Recipes</title>
     <link rel="icon" href="favicon.ico" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script> -->
 
     <link rel="stylesheet" href="main.css"/>
 
@@ -31,7 +31,6 @@
           </li>
         </menu>
       </nav>
-      <!-- Since we don't have the ability to style we use old style HTML to give some visual formatting -->
     </header>
 
     <main class="container-fluid bg-light text-center text-dark">
@@ -42,11 +41,13 @@
       <br />
       <div class="top-right-container">
         <!-- Button to trigger the modal -->
-        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#myModal">Submit Recipe</button>
+        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#myModal">Add Recipe</button>
+        <!-- <button type="button" class="btn btn-primary" onclick="recipes.showModal()">Add Recipe</button> -->
+
 
         <!-- Modal template -->
-        <div class="modal fade" id="myModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-          <div class="modal-dialog">
+        <div class="modal fade" id="myModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true" role="dialog">
+          <div class="modal-dialog" role="dialog">
             <div class="modal-content">
               <div class="modal-header">
                 <h5 class="modal-title" id="exampleModalLabel">Submit Recipe</h5>
@@ -60,15 +61,27 @@
                   </div>
                   <div class="mb-3">
                     <label for="ingredients" class="form-label">Ingredients</label>
-                    <textarea class="form-control" id="ingredients" rows="3" placeholder="Enter ingredients"></textarea>
+                    <textarea class="form-control" id="ingredients" rows="3" placeholder="Enter ingredients, each on a new line"></textarea>
                   </div>
                   <div class="mb-3">
-                    <label for="perServing" class="form-label">Per Serving</label>
-                    <textarea class="form-control" id="perServing" rows="3" placeholder="Enter per serving details"></textarea>
+                    <label for="caloriesPerServing" class="form-label">Calories Per Serving</label>
+                    <input type="number" class="form-control" id="caloriesPerServing" placeholder="Enter calories per serving" step="0.1">
+                  </div>
+                  <div class="mb-3">
+                      <label for="proteinPerServing" class="form-label">Protein Per Serving</label>
+                      <input type="number" class="form-control" id="proteinPerServing" placeholder="Enter grams pf protein per serving" step="0.1">
+                  </div>
+                  <div class="mb-3">
+                      <label for="fatPerServing" class="form-label">Fat Per Serving</label>
+                      <input type="number" class="form-control" id="fatPerServing" placeholder="Enter grams of fat per serving" step="0.1">
+                  </div>
+                  <div class="mb-3">
+                      <label for="carbsPerServing" class="form-label">Carbohydrates Per Serving</label>
+                      <input type="number" class="form-control" id="carbsPerServing" placeholder="Enter grams of carbohydrates per serving" step="0.1">
                   </div>
                   <div class="mb-3">
                     <label for="instructions" class="form-label">Instructions</label>
-                    <textarea class="form-control" id="instructions" rows="3" placeholder="Enter instructions"></textarea>
+                    <textarea class="form-control" id="instructions" rows="3" placeholder="Enter instructions, each on a new line"></textarea>
                   </div>
                   <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
@@ -228,5 +241,6 @@
       </div>
     </footer>
     <script src="recipes.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
   </body>
 </html>
