--- a/recipes.html
+++ b/recipes.html
@@ -95,7 +95,7 @@
       </div>
       <br />
       <div>
-        <table class="table">
+        <table id="table-container">
           <thead>
             <tr>            
               <th>Breakfast</th>
@@ -109,128 +109,12 @@
             </tr>
           </thead>
           <tr>
-            <td>
-              <table class="table">
-                <thead>
-                  <tr>
-                    <th>Meal Title(Database Data)</th>
-                  </tr>
-                  <tr>
-                    <th>Ingredients</th>
-                    <th>Per Serving</th>
-                  </tr>
-                </thead>
-                <tbody>
-                  <tr>
-                    <td>
-                      <ul>
-                        <li>ingredient1</li>
-                        <li>ingredient2</li>
-                        <li>ingredient3</li>
-                      </ul>
-                    </td>
-                    <td>
-                      <ul>
-                        <li>Calories:</li>
-                        <li>Protein:</li>
-                        <li>Fat</li>
-                        <li>Carbs</li>
-                      </ul>
-                    </td>
-                  </tr>
-                  <tr>
-                    <td><a href="">Instructions</a></td>
-                    <td><a href="reviews.html">Reviews</a></td>
-                  </tr>
-                  <tr>       
-                    <td>Votes:WebSocket Data </td>           
-                    <td><button class="btn btn-primary">UpVote</button></td>
-                  </tr>
-                </tbody>
-              </table>
-            </td>
-            <td>
-              <table class="table">
-                <thead>
-                  <tr>
-                    <th>Meal Title</th>
-                  </tr>
-                  <tr>
-                    <th>Ingredients</th>
-                    <th>Per Serving</th>
-                  </tr>
-                </thead>
-                <tbody>
-                  <tr>
-                    <td>
-                      <ul>
-                        <li>ingredient1</li>
-                        <li>ingredient2</li>
-                        <li>ingredient3</li>
-                      </ul>
-                    </td>
-                    <td>
-                      <ul>
-                        <li>Calories:</li>
-                        <li>Protein:</li>
-                        <li>Fat</li>
-                        <li>Carbs</li>
-                      </ul>
-                    </td>
-                  </tr>
-                  <tr>
-                    <td><a href="">Instructions</a></td>
-                    <td><a href="reviews.html">Reviews</a></td>
-                  </tr>
-                  <tr>       
-                    <td>Votes: </td>           
-                    <td><button class="btn btn-primary">UpVote</button></td>
-                  </tr>
-                </tbody>
-              </table>
-            </td>
-            <td>
-              <table class="table">
-                <thead>
-                  <tr>
-                    <th>Meal Title</th>
-                  </tr>
-                  <tr>
-                    <th>Ingredients</th>
-                    <th>Per Serving</th>
-                  </tr>
-                </thead>
-                <tbody>
-                  <tr>
-                    <td>
-                      <ul>
-                        <li>ingredient1</li>
-                        <li>ingredient2</li>
-                        <li>ingredient3</li>
-                      </ul>
-                    </td>
-                    <td>
-                      <ul>
-                        <li>Calories:</li>
-                        <li>Protein:</li>
-                        <li>Fat</li>
-                        <li>Carbs</li>
-                      </ul>
-                    </td>
-                  </tr>
-                  <tr>
-                    <td><a href="">Instructions</a></td>
-                    <td><a href="reviews.html">Reviews</a></td>
-                  </tr>
-                  <tr>       
-                    <td>Votes: </td>           
-                    <td><button class="btn btn-primary">UpVote</button></td>
-                  </tr>
-                </tbody>
-              </table>
-            </td>
+            <td id="breakfast-table" class="meal-table"></td>
+            <td id='lunch-table' class="meal-table"></div>
+            <td id='dinner-table' class="meal-table"></div>
           </tr>
         </table>
+
       </div>
     </main>
 
