--- a/recipes.html
+++ b/recipes.html
@@ -10,6 +10,7 @@
     <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script> -->
 
     <link rel="stylesheet" href="main.css"/>
+    <link rel="stylesheet" href="recipes.css">
 
   </head>
   <body class="bg-primary text-light">
@@ -59,19 +60,46 @@
           </thead>
           <tr>
             <td id="breakfast-table" class="meal-table"></td>
-            <td id='lunch-table' class="meal-table"></div>
-            <td id='dinner-table' class="meal-table"></div>
+            <td id='lunch-table' class="meal-table"></td>
+            <td id='dinner-table' class="meal-table"></td>
           </tr>
         </table>
       </div>
     </main>
+    <!-- Instructions Modal -->
+    <div class="modal fade text-dark" id="instructionsModal" tabindex="-1" aria-labelledby="instructionsModalLabel" aria-hidden="true">
+      <div class="modal-dialog modal-dialog-centered" role="dialog">
+          <div class="modal-content">
+              <div class="modal-header">
+                  <h5 class="modal-title" id="instructionsModalLabel">Instructions</h5>
+                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+              </div>
+              <div class="modal-body"></div>
+          </div>
+      </div>
+    </div>
+
     <!-- Modal template -->
-    <div class="modal fade" id="newRecipeModal" aria-labelledby="exampleModalLabel">
+    <div class="modal fade text-dark" id="newRecipeModal" tabindex="-1" role="dialog" aria-labelledby="newRecipeModalLabel" aria-hidden="true">
       <div class="modal-dialog" role="dialog">
         <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="newRecipeModalLabel">Add a Recipe</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
           <div class="modal-body">
             <form>
               <div class="mb-3">
+                <label for="mealType" class="form-label">Meal Type</label>
+                <select class="form-select" id="mealType">
+                    <option value="breakfast">Breakfast</option>
+                    <option value="lunch">Lunch</option>
+                    <option value="dinner">Dinner</option>
+                </select>
+              </div>
+              <div>
                 <label for="mealTitle" class="form-label">Meal Title</label>
                 <input type="text" class="form-control" id="mealTitle" placeholder="Enter Meal Title">
               </div>
