--- a/recipes.html
+++ b/recipes.html
@@ -7,19 +7,16 @@
     <title>Recipes</title>
     <link rel="icon" href="favicon.ico" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script> -->
 
     <link rel="stylesheet" href="main.css"/>
     <link rel="stylesheet" href="recipes.css">
 
   </head>
   <body class="bg-primary text-light">
-    <!-- Use header, main, and footer elements to give semantic structure -->
     <header class="container-fluid">
       <!-- Navigation elements -->
       <nav class="navbar fixed-top navbar-dark bg-dark">
         <a class="navbar-brand" href="#">ProNutriLog<sup>&reg;</sup></a>
-        <!-- Menu is a semantic alternative to <ul> that represents an interaction -->
         <menu class="navbar-nav">
           <li class="nav-item"> 
             <a class="nav-link" href="index.html">Home</a> 
@@ -30,6 +27,7 @@
           <li class="nav-item">
             <a class="nav-link" href="reviews.html">Reviews</a>
           </li>
+          <p class="user-name ms-auto nav-item"></p>
         </menu>
       </nav>
     </header>
@@ -58,11 +56,13 @@
               <td><img src="images/dinner.jpg" class="img-thumbnail"></td>
             </tr>
           </thead>
-          <tr>
-            <td id="breakfast-table" class="meal-table"></td>
-            <td id='lunch-table' class="meal-table"></td>
-            <td id='dinner-table' class="meal-table"></td>
-          </tr>
+          <tbody>
+            <tr>
+              <td id="breakfast-table" class="meal-table"></td>
+              <td id='lunch-table' class="meal-table"></td>
+              <td id='dinner-table' class="meal-table"></td>
+            </tr>          
+          </tbody>
         </table>
       </div>
     </main>
@@ -129,7 +129,7 @@
               </div>
               <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-primary">Submit</button>
+                <button type="button" class="btn btn-primary" onclick="recipes.submitRecipe()" data-bs-dismiss="modal">Submit</button>
               </div>
             </form>
           </div>
@@ -143,6 +143,7 @@
         <a class="text-reset" href="https://github.com/CarterG2099/startup.git">GitHub</a>
       </div>
     </footer>
+    <script src="reviews.js"></script>
     <script src="recipes.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
   </body>
