--- a/public/reviews.html
+++ b/public/reviews.html
@@ -29,6 +29,8 @@
     </header>
     <main class="container-fluid bg-light text-dark">
       <h2>Recipe Reviews</h2>
+      <div id="quote" class="quote-box bg-light text-dark"></div>
+    </div>
       <body class="text-center">
         <br>
         <br>
