--- a/public/index.html
+++ b/public/index.html
@@ -18,13 +18,7 @@
         <!-- Menu is a semantic alternative to <ul> that represents an interaction -->
         <menu class="navbar-nav">
           <li class="nav-item"> 
-            <a class="nav-link" href="index.html">Home</a> 
-          </li>
-          <li class="nav-item"> 
-            <a class="nav-link" href="recipes.html">Recipes</a> 
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="reviews.html">Reviews</a>
+            <a class="nav-link active" href="index.html">Home</a> 
           </li>
         </menu>
       </nav>
@@ -33,6 +27,40 @@
 
     <main class="container-fluid bg-light text-center text-dark">
       <div>
+        <h1>Login to View Recipes</h1>
+        <!-- Displayed when needing authentication -->
+        <div id="loginControls" style="display: none">
+          <div class="input-group mb-3">
+            <span class="input-group-text">@</span>
+            <input class="form-control" type="text" id="userName" placeholder="your@email.com" />
+          </div>
+          <div class="input-group mb-3">
+            <span class="input-group-text">🔒</span>
+            <input class="form-control" type="password" id="userPassword" placeholder="password" />
+          </div>
+          <button type="button" class="btn btn-primary" onclick="loginUser()">Login</button>
+          <button type="button" class="btn btn-primary" onclick="createUser()">Create</button>
+        </div>
+        <!-- Displayed when ready to view -->
+        <div id="viewControls" style="display: none">
+          <div id="Name"></div>
+          <button type="button" class="btn btn-primary" onclick="viewRecipes()">View Recipes</button>
+          <button type="button" class="btn btn-secondary" onclick="logout()">Logout</button>
+        </div>
+      </div>
+
+      <!-- Error dialog -->
+      <div class="modal fade" id="msgModal" tabindex="-1">
+        <div class="modal-dialog modal-dialog-centered">
+          <div class="modal-content text-dark">
+            <div class="modal-body">Sorry an error occured</div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- <div>
         <h1>Welcome</h1>
         <p>Login to view recipes</p>
         <form method="get" action="recipes.html">
@@ -40,7 +68,7 @@
           <input type="text" id="name" placeholder="Your name here" />
           <button type="submit" class="btn btn-primary" onclick="login()">Login</button>
         </form>
-      </div>
+      </div> -->
     </main>
 
     <footer class="bg-dark text-white-50">
