--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <!-- Tell browsers not to scale the viewport automatically -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" 
+    content="width=device-width, initial-scale=1.0" />
     <title>ProNutriLog-HTML</title>
     <link rel="icon" href="favicon.ico" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" 
+    rel="stylesheet" 
+    integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" 
+    crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="main.css"/>
   </head>
   <body class="bg-primary text-light">
@@ -60,15 +65,6 @@
           </div>
         </div>
       </div>
-      <!-- <div>
-        <h1>Welcome</h1>
-        <p>Login to view recipes</p>
-        <form method="get" action="recipes.html">
-          <label for="name">Name</label>
-          <input type="text" id="name" placeholder="Your name here" />
-          <button type="submit" class="btn btn-primary" onclick="login()">Login</button>
-        </form>
-      </div> -->
     </main>
 
     <footer class="bg-dark text-white-50">
@@ -78,5 +74,10 @@
       </div>
     </footer>
     <script src="login.js"></script>
+    <script
+    src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+    crossorigin="anonymous"
+  ></script>
   </body>
 </html>
