--- a/index.html
+++ b/index.html
@@ -1,83 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <!-- Tell browsers not to scale the viewport automatically -->
-    <meta name="viewport" 
-    content="width=device-width, initial-scale=1.0" />
-    <title>ProNutriLog-HTML</title>
-    <link rel="icon" href="favicon.ico" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" 
-    rel="stylesheet" 
-    integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" 
-    crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="main.css"/>
+    <meta charset="utf-8" />
+    <link rel="icon" href="/favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#000000" />
+
+    <title>Simon React</title>
   </head>
-  <body class="bg-primary text-light">
-    <!-- Use header, main, and footer elements to give semantic structure -->
-    <header class="container-fluid">
-      <!-- Navigation elements -->
-      <nav class="navbar fixed-top navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">ProNutriLog<sup>&reg;</sup></a>
-        <!-- Menu is a semantic alternative to <ul> that represents an interaction -->
-        <menu class="navbar-nav">
-          <li class="nav-item"> 
-            <a class="nav-link active" href="index.html">Home</a> 
-          </li>
-        </menu>
-      </nav>
-      <!-- Since we don't have the ability to style we use old style HTML to give some visual formatting -->
-    </header>
-
-    <main class="container-fluid bg-light text-center text-dark">
-      <div>
-        <h1>Login to View Recipes</h1>
-        <!-- Displayed when needing authentication -->
-        <div id="loginControls" style="display: none">
-          <div class="input-group mb-3">
-            <span class="input-group-text">@</span>
-            <input class="form-control" type="text" id="userName" placeholder="your@email.com" />
-          </div>
-          <div class="input-group mb-3">
-            <span class="input-group-text">🔒</span>
-            <input class="form-control" type="password" id="userPassword" placeholder="password" />
-          </div>
-          <button type="button" class="btn btn-primary" onclick="loginUser()">Login</button>
-          <button type="button" class="btn btn-primary" onclick="createUser()">Create</button>
-        </div>
-        <!-- Displayed when ready to view -->
-        <div id="viewControls" style="display: none">
-          <div id="Name"></div>
-          <button type="button" class="btn btn-primary" onclick="viewRecipes()">View Recipes</button>
-          <button type="button" class="btn btn-secondary" onclick="logout()">Logout</button>
-        </div>
-      </div>
-
-      <!-- Error dialog -->
-      <div class="modal fade" id="msgModal" tabindex="-1">
-        <div class="modal-dialog modal-dialog-centered">
-          <div class="modal-content text-dark">
-            <div class="modal-body">Sorry an error occured</div>
-            <div class="modal-footer">
-              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-            </div>
-          </div>
-        </div>
-      </div>
-    </main>
-
-    <footer class="bg-dark text-white-50">
-      <div class="container-fluid">
-        <span class="text-reset">Carter Gividen</span>
-        <a class="text-reset" href="https://github.com/CarterG2099/startup.git">GitHub</a>
-      </div>
-    </footer>
-    <script src="login.js"></script>
-    <script
-    src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
-    crossorigin="anonymous"
-  ></script>
+  <body>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="root"></div>
+    <script type="module" src="/index.jsx"></script>
   </body>
 </html>
